update gitignore file

--- a/.gitignore
+++ b/.gitignore
@@ -9,11 +9,13 @@
 *.project
 *.classpath
 *.iml
+*.factorypath
 
 
 .settings/*
 .idea/*
-target/* 
+target/*
+.vscode/*
 
 # Packages #
 ############
